--- a/ReviewSchool/ReviewSchool/New Group/Scan.storyboard
+++ b/ReviewSchool/ReviewSchool/New Group/Scan.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FF2-LP-vgX" userLabel="Scan Camera">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FF2-LP-vgX" userLabel="Scan Camera">
                                 <rect key="frame" x="103.5" y="109" width="207" height="216"/>
                                 <color key="backgroundColor" red="0.49972586866603141" green="0.77981159030644187" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
@@ -62,7 +62,6 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="FF2-LP-vgX" firstAttribute="height" secondItem="gKs-cr-cR2" secondAttribute="height" multiplier="0.241071" id="04s-P5-8Rm"/>
                             <constraint firstItem="YZs-Iz-9Ut" firstAttribute="centerX" secondItem="FF2-LP-vgX" secondAttribute="centerX" id="3FP-VM-NKl"/>
                             <constraint firstItem="YZs-Iz-9Ut" firstAttribute="width" secondItem="gKs-cr-cR2" secondAttribute="width" multiplier="0.65" id="3Kc-F8-bKf"/>
                             <constraint firstItem="8Sw-D5-gXI" firstAttribute="trailing" secondItem="YZs-Iz-9Ut" secondAttribute="trailing" id="4Mt-20-ahh"/>
@@ -166,7 +165,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo 1" translatesAutoresizingMaskIntoConstraints="NO" id="Qp7-5d-qa4" userLabel="Image 1 View">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="school" translatesAutoresizingMaskIntoConstraints="NO" id="Qp7-5d-qa4" userLabel="Image 1 View">
                                                 <rect key="frame" x="83" y="167" width="248" height="139.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="Qp7-5d-qa4" secondAttribute="height" multiplier="16:9" id="ptQ-gv-Zpf"/>
@@ -194,8 +193,17 @@
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EVC-sN-kYF">
                                                 <rect key="frame" x="20" y="553.5" width="374" height="50"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V82-C8-uCa" customClass="RatingView" customModule="ReviewSchool" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
+                                                    </stackView>
+                                                </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
+                                                    <constraint firstItem="V82-C8-uCa" firstAttribute="leading" secondItem="EVC-sN-kYF" secondAttribute="leading" id="KjE-YE-rRG"/>
+                                                    <constraint firstItem="V82-C8-uCa" firstAttribute="top" secondItem="EVC-sN-kYF" secondAttribute="top" id="MaY-GW-r30"/>
+                                                    <constraint firstAttribute="bottom" secondItem="V82-C8-uCa" secondAttribute="bottom" id="Nnm-Sn-Gxh"/>
+                                                    <constraint firstAttribute="trailing" secondItem="V82-C8-uCa" secondAttribute="trailing" id="QRH-j5-PHd"/>
                                                     <constraint firstAttribute="height" constant="50" id="uAq-CI-SNK"/>
                                                 </constraints>
                                             </view>
@@ -286,30 +294,30 @@
                         <constraints>
                             <constraint firstItem="Fbr-wP-7QZ" firstAttribute="top" secondItem="VAb-Pe-gMs" secondAttribute="top" id="F3I-ii-4gV"/>
                             <constraint firstItem="wgy-cF-fI3" firstAttribute="bottom" secondItem="EXh-P9-MMa" secondAttribute="bottom" id="IHB-eg-Cdz"/>
-                            <constraint firstItem="wgy-cF-fI3" firstAttribute="leading" secondItem="EXh-P9-MMa" secondAttribute="leading" id="SSb-pn-Q4h"/>
+                            <constraint firstItem="wgy-cF-fI3" firstAttribute="leading" secondItem="VAb-Pe-gMs" secondAttribute="leading" id="SSb-pn-Q4h"/>
                             <constraint firstItem="wgy-cF-fI3" firstAttribute="top" secondItem="Fbr-wP-7QZ" secondAttribute="bottom" id="b06-Qt-mif"/>
-                            <constraint firstItem="Fbr-wP-7QZ" firstAttribute="leading" secondItem="VAb-Pe-gMs" secondAttribute="leading" id="fIa-qa-73g"/>
-                            <constraint firstItem="wgy-cF-fI3" firstAttribute="trailing" secondItem="EXh-P9-MMa" secondAttribute="trailing" id="fPx-VI-j1e"/>
-                            <constraint firstItem="Fbr-wP-7QZ" firstAttribute="trailing" secondItem="VAb-Pe-gMs" secondAttribute="trailing" id="gea-rm-Uyb"/>
+                            <constraint firstItem="Fbr-wP-7QZ" firstAttribute="leading" secondItem="EXh-P9-MMa" secondAttribute="leading" id="fIa-qa-73g"/>
+                            <constraint firstItem="wgy-cF-fI3" firstAttribute="trailing" secondItem="VAb-Pe-gMs" secondAttribute="trailing" id="fPx-VI-j1e"/>
+                            <constraint firstItem="Fbr-wP-7QZ" firstAttribute="trailing" secondItem="EXh-P9-MMa" secondAttribute="trailing" id="gea-rm-Uyb"/>
                             <constraint firstItem="yFE-q2-ZAK" firstAttribute="width" secondItem="EXh-P9-MMa" secondAttribute="width" id="mjx-3M-7zv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VAb-Pe-gMs"/>
                     </view>
                     <connections>
-                        <outlet property="RatingView" destination="EVC-sN-kYF" id="4yb-to-5rn"/>
                         <outlet property="contentTextView" destination="iPS-w4-jJ0" id="JRb-1u-tIg"/>
                         <outlet property="doneButton" destination="uL4-r6-LRC" id="sGG-cg-io8"/>
                         <outlet property="imageImageView" destination="Qp7-5d-qa4" id="6O4-IS-Tbe"/>
+                        <outlet property="ratingView" destination="V82-C8-uCa" id="F2o-LV-bUq"/>
                         <outlet property="schoolNameLabel" destination="TsD-pC-vav" id="8Wi-xW-ktD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rnX-9G-9Yy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="828.98550724637687" y="98.4375"/>
+            <point key="canvasLocation" x="828" y="84"/>
         </scene>
     </scenes>
     <resources>
         <image name="backward-arrow" width="32" height="32"/>
-        <image name="logo 1" width="128" height="124"/>
+        <image name="school" width="512" height="512"/>
     </resources>
 </document>
